# llvm-solutions

./: .clang-format  .gitignore  CMakeLists.txt  README.md
app/: app.cpp  app.s  app.txt  app2.s  app3.s
src/cpu/: cpu.cpp  cpu.h  ir_gen.cpp  ir_gen.h
src/instruction/: instruction.cpp  instruction.h
src/lib/: sim.cpp  sim.h
src/parser/: instruction_parser.cpp  instruction_parser.h
task4-asm2ir/: README.md
task4-asm2ir/src/instruction/: instruction.cpp
task5-frontend-llvm/: CMakeLists.txt  README.md
task5-frontend-llvm/.cache/clangd/index/: SimpleLangVisitor.cpp.8AA759D3DF10154D.idx  SimpleLangVisitor.h.72D852E54D696390.idx  correctness-test.cpp.2FA17474B8922F39.idx  cpu.cpp.50A45768CC0527EC.idx  cpu.h.C49EABB3F560BBDF.idx  instruction.cpp.3A18D02BB8752053.idx  instruction.h.D7573A80F53A3F0B.idx  instruction_parser.cpp.32E93047DA31F6C0.idx  instruction_parser.h.C8B9927EFBE5F7A4.idx  (+4 more)
task5-frontend-llvm/app/: app.sl  app1  app2  app3
task5-frontend-llvm/grammar/: SimpleLangLexer.g4  SimpleLangParser.g4
task5-frontend-llvm/grammar/.antlr/: SimpleLangLexer.interp  SimpleLangLexer.java  SimpleLangLexer.tokens  SimpleLangParser.interp  SimpleLangParser.java  SimpleLangParserBaseListener.java  SimpleLangParserListener.java
task5-frontend-llvm/src/lib/: sim.cpp  sim.h
task5-frontend-llvm/src/visitor/: SimpleLangVisitor.cpp  SimpleLangVisitor.h
task5-frontend-llvm/test/: correctness-test.cpp  main.cpp
task5-frontend-llvm/test/test_grammar/: correctness-test.cpp  text
test/: main.cpp
test/test_apps/: t1_alloc_write64ii.s  t1_alloc_writei.s
